--- a/CheckCXX11Support/example_header.hpp.in
+++ b/CheckCXX11Support/example_header.hpp.in
@@ -35,6 +35,7 @@
 #cmakedefine HAS_CXX11_NOEXCEPT
 #cmakedefine HAS_CXX11_NULLPTR
 #cmakedefine HAS_CXX11_NUMERIC_IOTA
+#cmakedefine HAS_CXX11_RANDOM
 #cmakedefine HAS_CXX11_RANGE_BASED_FOR
 #cmakedefine HAS_CXX11_RVALUE_REFERENCES
 #cmakedefine HAS_CXX11_SIZEOF_MEMBER
