--- a/CheckCXX11Support/example_header.hpp.in
+++ b/CheckCXX11Support/example_header.hpp.in
@@ -25,6 +25,7 @@
 #cmakedefine HAS_CXX11_CSTDINT_H
 #cmakedefine HAS_CXX11_DECLTYPE
 #cmakedefine HAS_CXX11_DEFAULT_TEMPLATE_ARGUMENTS
+#cmakedefine HAS_CXX11_EXPLICIT_CONVERSION_OPERATORS
 #cmakedefine HAS_CXX11_FUNC
 #cmakedefine HAS_CXX11_FUNCTIONAL_BIND
 #cmakedefine HAS_CXX11_FUNCTIONAL_FUNCTION
