[Root6] Implement custom TRint wrapper
Provide a simple copypasta of ROOT's main program for an interactive
session using a TRint Application. Prepare gEnv and gROOT before
starting application so that we can experiment with using custom
rc files, logon/off scripts and macro/loader paths. This functionality
may be useful for interpreters for projects with specific requirements
(e.g. libs/dicts of data types custom styles etc). It's possible
ROOT's own config system may be usable for this, but it's singular
so that different configs are difficult to manage.

Use Binreloc for application self location.

--- a/ROOT6/CMakeLists.txt
+++ b/ROOT6/CMakeLists.txt
@@ -2,10 +2,15 @@
 cmake_minimum_required(VERSION 3.2)
 project(RootSixTests)
 
+include_directories(${PROJECT_BINARY_DIR})
+
 # - Locate ROOT6, basically assume it's been installed using CMake
 # so the code gen macros/functions are available
-find_package(ROOT 6.2.0 REQUIRED)
-include(${ROOT_USE_FILE})
+find_package(ROOT 6.2.0 REQUIRED Core Rint)
+#include(${ROOT_USE_FILE}) <- This uses add_definitions with C++ specific
+# flags, thereby messing up compiliation of mixed C/C++ sources
+include_directories(${ROOT_INCLUDE_DIRS})
+set(CMAKE_CXX_FLAGS "${ROOT_CXX_FLAGS}")
 
 #-----------------------------------------------------------------------
 # Stuff to do:
@@ -13,4 +18,22 @@ include(${ROOT_USE_FILE})
 # - Store class in branch of TTree
 # - Schema evolution with ClassDef (and/or TClass::GetCheckSum?)
 
+#-----------------------------------------------------------------------
+# A simple re-interpreter
+# - Generate binreloc header/source with mangled names, ensuring first
+# character(s) are a valid for a C identifier
+string(RANDOM LENGTH 18 MANGLE_BINRELOC_MAIN)
+set(MANGLE_BINRELOC "MB${MANGLE_BINRELOC_MAIN}")
+set(BINRELOC_HEADER "myinterp_BinReloc.h")
+configure_file(BinReloc.h.in myinterp_BinReloc.h @ONLY)
+configure_file(BinReloc.c.in myinterp_BinReloc.c @ONLY)
+add_definitions(-DENABLE_BINRELOC)
+
+# Copy resource scripts to build directory
+configure_file(myconfig myconfig @ONLY)
+configure_file(myinterplogon.C myinterplogon.C @ONLY)
+configure_file(myinterplogoff.C myinterplogoff.C @ONLY)
+
+add_executable(myinterp myinterp.cc myinterp_BinReloc.c)
+target_link_libraries(myinterp ${ROOT_LIBRARIES})
 
