Add minimal R6 serialization example

--- a/ROOT6/CMakeLists.txt
+++ b/ROOT6/CMakeLists.txt
@@ -9,12 +9,28 @@ include_directories(${PROJECT_BINARY_DIR})
 find_package(ROOT 6.2.0 REQUIRED Core Rint)
 #include(${ROOT_USE_FILE}) <- This uses add_definitions with C++ specific
 # flags, thereby messing up compiliation of mixed C/C++ sources
+include(RootNewMacros)
 include_directories(${ROOT_INCLUDE_DIRS})
 set(CMAKE_CXX_FLAGS "${ROOT_CXX_FLAGS}")
+
 
 #-----------------------------------------------------------------------
 # Stuff to do:
 # - Create simple class, dictionary and rlibmap file
+# Note that due to limitations of Root6/Cling, need to load the library
+# *and* include headers..., i.e. as per root manual:
+#
+# R__LOAD_LIBRARY(libNAME)
+# #include "headerforiface.h"
+root_generate_dictionary(DICT_RootSixTests
+  ${PROJECT_SOURCE_DIR}/Foo.hpp
+  MODULE RootSixTests
+  LINKDEF ${PROJECT_SOURCE_DIR}/RootSixLinkDef.h
+  )
+add_library(RootSixTests SHARED DICT_RootSixTests.cxx Foo.hpp Foo.cpp)
+target_link_libraries(RootSixTests ${ROOT_LIBRARIES})
+
+
 # - Store class in branch of TTree
 # - Schema evolution with ClassDef (and/or TClass::GetCheckSum?)
 
