Demon boost's serialization singleton behaviour
Seen in use elsewhere, this demos most basic functionality. It's used
elsewhere to ensure load/run of ponder registration in library code.

--- a/Reflection/CMakeLists.txt
+++ b/Reflection/CMakeLists.txt
@@ -12,3 +12,10 @@ target_link_libraries(Person ponder::ponder)
 
 add_executable(basicPonder basicPonder.cpp)
 target_link_libraries(basicPonder Person)
+
+# The oddity of Bayeux using boost::serialization's singleton. Appears to be used to
+# guarantee calling of ponder registration code, so is that born out?
+# - Create a library
+add_library(Hidden SHARED Hidden.hpp Hidden.cpp)
+add_executable(HiddenUser HiddenUser.cpp)
+target_link_libraries(HiddenUser Hidden)
