Show boost singleton use in Plugin

--- a/Reflection/CMakeLists.txt
+++ b/Reflection/CMakeLists.txt
@@ -17,5 +17,6 @@ target_link_libraries(basicPonder Person)
 # guarantee calling of ponder registration code, so is that born out?
 # - Create a library
 add_library(Hidden SHARED Hidden.hpp Hidden.cpp)
+add_library(Plugin SHARED Plugin.cpp)
 add_executable(HiddenUser HiddenUser.cpp)
 target_link_libraries(HiddenUser Hidden)
