Add dumb struct example to hiddenPonder
Abstract library loading of ponder "dictionaries" to a simple struct.
Provide new visitClasses function to iterate over all defined classes
and visit them.

Implement new Config struct, and reflect it in ponder, only
exposing the fields we want to.

--- a/Reflection/CMakeLists.txt
+++ b/Reflection/CMakeLists.txt
@@ -15,6 +15,10 @@ add_library(Person SHARED Person.hpp Person.cpp)
 add_library(Person_ponder SHARED ponderPerson.cpp)
 target_link_libraries(Person_ponder Person ponder::ponder)
 
+# Library for the reflection symbols for the Config type
+add_library(Config_ponder SHARED ponderConfig.cpp)
+target_link_libraries(Config_ponder ponder::ponder)
+
 # Program that just uses the core type, loads the library
 add_executable(basicPonder basicPonder.cpp)
 target_link_libraries(basicPonder Person ponder::ponder)
